# LadonMOOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VM-SETUP.md  make_ctags.sh  tags.cmake
include/: moosbool.h
manifest/: pBBBlue.mfs  pGPSd.mfs  pGeodesy.mfs  pMixAmp.mfs  pMux.mfs  pSBUS.mfs  pStartLogic.mfs  uReflector.mfs
missions/basic_rc/: basic_rc.moos  basic_rc_headless.moos  test.moos
missions/ekf-test/: ekf-test.moos
missions/motor_basic_rc/: basic_rc.moos
missions/s1_alpha/: alpha.moos
missions/s24_sedated/: remote_sedated.moos  sedated.bhv  sedated.moos
missions/sail-autonomy/pathfinder_alpha_sim/: alpha_bridge.xml  alpha_greenlake.bhv  alpha_greenlake_long.bhv  alpha_template.bhv  launch.sh  pathfinder_alpha_sim.launch  pathfinder_alpha_sim.moos
missions/sail-autonomy/pathfinder_alpha_sim/boat_config/: pathfinder_boat.json  pathfinder_foresail.json  pathfinder_mizzen.json
missions/sail-autonomy/pathfinder_alpha_sim/path_data/: GreenlakeLongPath.kml  Greenlake_Short_Path.kml  UWYCPath.yml
missions/sail_basic_rc/: basic_rc.moos  basic_rc_headless.moos
missions/sail_ros_auto/: basic_auto_headless.launch  basic_auto_headless.moos  launch.sh
missions/sail_ros_auto/behaviors/: alpha.bhv
missions/sail_ros_rc/: basic_rc.moos  basic_rc_headless.launch  basic_rc_headless.moos  basic_rc_ros_config.xml  launch.sh  stop.sh
src/: CMakeLists.txt
